tests/pass/test_core_traits.tk
import std/io::println
import core/marker::{@Clone,@Default}

shape Dummy (
    id: i32
)

impl Dummy@Clone {
    fn clone(self) {
        // Just for parsing test
    }
}

impl Dummy@Default {
    fn init(self) {
        // Just for parsing test
    }
}

fn main() -> i32 {
    auto d = Dummy(id = 1)
    d.clone()
    d.init()
    
    println("Core traits parsed and called successfully.")
    return 0
}
